[Module1]: change bootstrap theme to the United http://bootswatch.com/united/

--- a/Module1/AlbumDetails.html
+++ b/Module1/AlbumDetails.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Music Store -- Album Title -- Artist</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- used United theme from http://bootswatch.com/united/ -->
     <link rel="stylesheet" href="Styles/bootstrap.min.css">
   </head>
   
@@ -19,7 +21,7 @@
           <img src="Album.png" class="img-responsive" alt="Album">
         </div>
         
-        <div class="col-md-8">
+        <div class="col-md-9">
           <h2>Album Title</h2>
           <h3>Artist</h3>
           <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tristique accumsan sapien, eu dictum enim sagittis id. Ut porttitor nunc enim, sit amet sollicitudin dolor vehicula quis. Aenean facilisis ante et magna venenatis, at efficitur tortor maximus. Ut non metus nec sapien viverra cursus. Sed et quam ut ante congue rhoncus. Nunc scelerisque aliquam sapien, sit amet tempor ante mattis non. Nullam scelerisque enim sit amet mattis venenatis. Praesent dapibus erat vel cursus pellentesque. Aenean ligula nunc, laoreet id pellentesque in, dictum in massa. Praesent elementum risus quis felis eleifend tristique. Integer cursus pharetra nunc, vitae suscipit lacus ultricies ac. Sed hendrerit risus scelerisque ligula placerat convallis. Phasellus diam felis, rhoncus vel pretium eget, congue non odio.</div>
